--- a/chance/bookMingSheng.html
+++ b/chance/bookMingSheng.html
@@ -42,8 +42,8 @@
 
                 <h1>南天文衡聖帝寶誥  志心皈命禮</h1>
                 <br>
-                <p>太上神威。英文雄武。精忠大義。高節清廉。</p>
-                <p>協運皇圖。德崇演正。掌儒道釋教之權。管天地人才之柄。</p>
+                <p>大上神威。英文雄武。精忠大義。高節清廉。</p>
+                <p>協運皇圖。德崇言正。掌儒道釋教之權。管天地人才之柄。</p>
                 <p>上司三十六天。星辰雲漢。下轄七十二地。土壘幽酆。</p>
                 <p>秉註生功德。延壽丹書。執定生死罪過。奪命黑籍。</p>
                 <p>考察諸佛諸神。監制群仙群職。德圓妙果。無量度人。</p>
@@ -61,16 +61,16 @@
                 <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(先主、桓侯)</p>
                 <p>吾嘗下遊漢季。&nbsp&nbsp結盟皇叔三人。</p>
                 <p>桃園名重千古。&nbsp&nbsp單刀秉燭於今。</p>
-                <p>寄曹明來明去。&nbsp&nbsp吞吳為漢超生。</p>
+                <p>寄曹明來明去。&nbsp&nbsp吞吳為漢超昇。</p>
                 <p>&nbsp&nbsp&nbsp&nbsp(嘉聖)</p>
-                <p>上帝憐吾忠耿。&nbsp&nbsp獨敕宣化幽明。</p>
+                <p>上帝憐我忠耿。&nbsp&nbsp獨敕宣化幽明。</p>
                 <p>令吾日遊天下。&nbsp&nbsp鑒別忠佞紛紛。</p>
                 <p>一切貪殘奸巧。&nbsp&nbsp還償果報斤斤。</p>
                 <p>最戒讀書文士。&nbsp&nbsp並及官宦軍民。</p>
                 <p>第一休欺父母。&nbsp&nbsp切莫圈套鄉鄰。</p>
                 <p>貧富先交朋友。&nbsp&nbsp朋友乃是五倫。</p>
                 <p>信心內外平等。&nbsp&nbsp何妨蹇難災迍。</p>
-                <p>曹操無底深險。&nbsp&nbsp現今受罪幽冥。</p>
+                <p>曹操無底深險。&nbsp&nbsp現今受罪陰冥。</p>
                 <p>(武侯)</p>
                 <p>孔明只緣忠義。&nbsp&nbsp幽冥群奉為神。</p>
                 <p>直心直受真福。&nbsp&nbsp巧計巧來禍因。</p>
@@ -105,13 +105,13 @@
                 <p>古佛明聖經。千載歎未曾。皈依無上道。乾元亨利貞。</p>
                 <br>
                 <p>漢漢壽亭侯。略節桃園經。書於玉泉寺。夜夢與凡人。</p>
-                <p>萬經千典有。吾經未舉行。著爾傳塵世。不可視為輕。</p>
+                <p>萬書千典有。吾經未舉行。著爾傳塵世。不可視為輕。</p>
                 <p>焚香高朗誦。其福即來臨。人能抄印送。諸疾不相侵。</p>
-                <p>家宅供此經。妖魅化為塵。船舟奉此經。風波即刻平。</p>
+                <p>家宅供此經。妖魅化為塵。舟船奉此經。風波即刻平。</p>
                 <p>行人佩此經。途路保安寧。書生看此經。不久步青雲。</p>
                 <p>婦人誦此經。二女五男成。若為亡化唸。亡化早超生。</p>
                 <p>若為父母唸。父母享遐齡。日唸三五遍。或誦百千聲。</p>
-                <p>諸神皆歡喜。宅舍並光明。凶事化為吉。福.祿.壽.重增。</p>
+                <p>諸神皆歡喜。宅舍並光明。凶事化為吉。福祿壽重增。</p>
 
                 <p>太上道君三界靈。眾聖五嶽雷電神。</p>
                 <p>五湖並四海。&nbsp&nbsp&nbsp&nbsp&nbsp日月斗星辰。</p>
@@ -125,26 +125,26 @@
                 <p>萬聖朝真均奏議。普天之下盡頒行。</p>
 
                 <p>吾素覽春秋。幼觀孔孟。惟以孝悌為先。修身治國為本。</p>
-                <p>異端蜂起。兵戈傷殘民命。十餘年。甲不離身。刀無潔淨。</p>
+                <p>異端蜂起。兵戈傷殘民命。十餘年甲不離身。刀無潔淨。</p>
                 <p>夜無穩睡三更。日不飽餐一頓。東戰西征。百戰而江山纔定。</p>
                 <p>白了鬚鬢星星。力倦馬羸刀鈍。費盡赤膽忠心。換得個封侯金印。</p>
-                <p>到如今亂臣賊子。捕風捉影。奸貪讒佞。結黨欺良。言無一定。</p>
+                <p>到如今亂臣賊子。捕風捉影。姦貪讒佞。結黨欺良。言無一定。</p>
                 <p>不思禮義廉恥。孝悌忠信。事每胡行。屢圖僥倖。篡君位。</p>
                 <p>戮忠臣。好貨財。淫美色。殺人縱性。只顧爽心樂事。</p>
                 <p>豈曉得後來報應。古今好事多磨。毋勉強苟求捷徑。如彩雲琉璃。</p>
                 <p>鮮花明月。人不知機。如剛刀快缺。妄動橫行。造下了些冤業。</p>
-                <p>遠則幾年。近則幾月。報應無差。法難漏洩。如人未遭逢。</p>
+                <p>遠則幾年。近則幾月。報應無差。法難漏泄。如人未遭逢。</p>
                 <p>各有時節。當思守命由天。安貧樂業。如百藝倉卒成功。</p>
                 <p>其物焉能精潔。草木不能培植。難長許多枝葉。五榖少用耕鋤。</p>
-                <p>苗雖秀而不結。文臣十載寒窗。方朝金闕。武將百戰臨危。始得公侯並列。</p>
+                <p>苗雖秀而不實。文臣十載寒窗。方朝金闕。武將百戰臨危。始得公侯並列。</p>
                 <p>吾乃日月精忠。乾坤大節。天崩吾崩。地裂吾裂。</p>
                 <br>
                 <p>偈曰</p>
-                <p>吾本天樞第六星。 臨凡欲使萬方寧。 形容雖去神猶在。留得精英震百靈。</p>
+                <p>吾本天樞第六星。 臨凡欲使萬方甯。 形容雖去神猶在。留得精英震百靈。</p>
                 <br>
-                <p>明聖經大眾聽。吾乃紫微宮裏朱衣神。協管文昌武曲星。祇因張仙(大帝)無主轄。</p>
+                <p>明聖經。大眾聽。吾乃紫微宮裏朱衣神。協管文昌武曲星。祇因張仙(大帝)無主轄。</p>
                 <p>敕令隨吾為從神。檢點少男與少女。或損陰騭絕子孫。送生催生及難產。</p>
-                <p>魅妖傷殘斑痘疹。如有焚香諷誦者。轉禍為祥顯聖靈。今有塑畫吾像者。</p>
+                <p>魅妖傷殘癍痘疹。如有焚香諷誦者。轉禍為祥顯聖靈。今有塑畫吾像者。</p>
                 <p>側立張仙(大帝)持彈弓。鑒知戰國侵凌亂。命吾臨凡救萬民。</p>
                 <p>玉皇賜吾名和姓。子胥五轉做忠臣。</p>
                 <p>臨潼解釋諸候難。絕卻奸秦并國心。</p>
@@ -158,22 +158,22 @@
                 <p>幼而離鄉。壯而出仕。</p>
                 <p>大丈夫以四海為家。何患乎吾無兄弟。</p>
                 <p>入桃園。覩兩人奇異。請問英雄何處。</p>
-                <p>雄赳赳朗曰張（桓侯）。貌堂堂溫言劉(先主)。</p>
-                <p>逐出身投地今逢主。須待挽天河水來蕩滌。</p>
+                <p>雄糾糾朗曰張（桓侯）。貌堂堂溫言劉(先主)。</p>
+                <p>遂出身投地。今逢主。須待挽天河水來蕩滌。</p>
                 <p>誠哉龍虎風雲會。宰牛馬。昭告</p>
                 <p>天地。結義匡扶漢室。破黃巾。誅董卓。呂布斃。</p>
-                <p>劫寨剿曹奸。鑽入空營內。雁侶散徐州。攜嫂無存地。</p>
-                <p>減燭張遼謀。破壁聖帝義。降漢不降曹。忠臣不事二。</p>
+                <p>劫寨剿曹奸。賺入空營內。雁侶散徐州。攜嫂無存地。</p>
+                <p>減燭張遼謀。破壁聖帝義。降漢不降曹。忠臣不二事。</p>
                 <p>封漢壽亭侯。隱無漢重鑄。三日華筵。曹瞞美意。</p>
-                <p>顏良文醜統兵圍。敢對立功。可酬曹歸計。封金卻印三辭曹。</p>
+                <p>顏良文醜統兵圍。敢對立功可酬曹歸計。封金卻印三辭曹。</p>
                 <p>挈眷尋兄一點忠。千里尋兄添義氣。五關斬將有威風。</p>
                 <p>離合英雄乾坤內。相逢兄弟古城中。智尚雖高無決勝。</p>
-                <p>運籌固識少經綸。三謁茅籚。臥龍晏起。大夢誰先覺。</p>
-                <p>平生相盡知。草堂春睡足。窗外日遲遲。未出茅籚。</p>
+                <p>運籌固識少經綸。三鄴茅廬。臥龍晏起。大夢誰先覺。</p>
+                <p>平生我(相)盡知。草堂春睡足。窗外日遲遲。未出茅廬。</p>
                 <p>三分已定。孔明（武侯）原是廣慧星。即是前朝嚴子陵（先師）。</p>
                 <p>此生諸葛亮（相）。再宋朱文公。輪迴三世相。永不下凡塵。</p>
                 <p>鼎足三分嫌地窄。江山今換許多人。大哥(先主)已在清虛府。</p>
-                <p>關某(聖帝)今掌三天門。三弟(桓侯)四川為土榖。每起忠良護國心。</p>
+                <p>關某(聖帝)今掌三天門。三弟(桓侯)四川為土谷。每起忠良護國心。</p>
                 <p>在宋易姓岳飛（武穆）將。在唐改諱曰張巡（公）。輪迴三轉皆忠烈。</p>
                 <p>上帝封為護國神。小可兵戈不差汝（聖）。大難危邦再下塵。</p>
 
@@ -181,8 +181,8 @@
                 <p>為人忠孝感天地。&nbsp&nbsp豈在持齋佛顯靈。</p>
                 <p>飲食衣服休華美。&nbsp&nbsp隨著隨餐莫厭爭。</p>
                 <p>禽獸一切皆性命。&nbsp&nbsp無故自食宰生靈。</p>
-                <p>一切化生皆活命。&nbsp&nbsp何苦張弓捕網尋。</p>
-                <p>草木果花休折採。&nbsp&nbsp嚴冬零落發陽春。</p>
+                <p>一切化生皆活命。&nbsp&nbsp何故張弓捕網尋。</p>
+                <p>草木花果休折採。&nbsp&nbsp嚴冬零落發陽春。</p>
                 <p>萬物悉含天地化。&nbsp&nbsp依時生長與人靈。</p>
                 <p>汝能遵守惜萬物。&nbsp&nbsp福有攸歸禍不侵。</p>
                 <p>勿謂善小而不做。&nbsp&nbsp勿謂惡小而可行。</p>
@@ -190,7 +190,7 @@
                 <p>孝悌忠信人之本。&nbsp&nbsp禮義廉恥人之根。</p>
                 <p>爾能聽吾行善事。&nbsp&nbsp定有祥雲足下騰。</p>
                 <p>吾受三天門掌握。&nbsp&nbsp萬神啟奏吾先聞。</p>
-                <p>善者紀錄加官爵。&nbsp&nbsp惡者遭殃絕子孫。</p>
+                <p>善者記錄加官爵。&nbsp&nbsp惡者遭殃絕子孫。</p>
                 <p>報應遲速時未到。&nbsp&nbsp昭彰早晚必終臨。</p>
                 <p>休道天高無耳目。&nbsp&nbsp虧心暗室有遊神。</p>
                 <p>敬神如在須誠敬。&nbsp&nbsp不可狂言褻聖明。</p>
@@ -202,8 +202,8 @@
                 <p>面赤心尤赤。&nbsp&nbsp鬚長義更長。</p>
                 <p>英雄氣蓋世。&nbsp&nbsp燭殘刀破壁。</p>
                 <p>爵祿辭不受。&nbsp&nbsp封庫印懸樑。</p>
-                <p>偃月刀磨仍快。歎兄弟不再。</p>
-                <p>臥蠶眉鎖未開。恨江山幾改。</p>
+                <p>偃月刀。磨仍快。嘆兄弟不再。</p>
+                <p>臥蠶眉。鎖未開。恨江山幾改。</p>
                 <p>亙古功名難比並。三天門下封元帥。稽首頓首。</p>
                 <br>
                 <p>上帝敕令。各部將帥。經傳下界。</p>
@@ -217,7 +217,7 @@
                 <p>公同註解。覆奏明章。毋容議改。行於四海。</p>
                 <p>皇圖鞏固。萬民永賴。著忠良。竭力匡衡。</p>
                 <p>孝順無改。廉潔不亂心田。節義臨危不敗。</p>
-                <p>忠孝廉節之章。聽解。</p>
+                <p>忠孝廉節之章聽解。</p>
                 <p>君使臣以禮。臣事君以忠。日用朝廷祿。當思補報功。</p>
                 <p>報國臣之本。惜卒將之宗。不飾文臣過。不滅武將功。</p>
                 <p>紀錄文華殿。舉劾建章宮。丹心如赤日。位必至三公。</p>
@@ -225,10 +225,10 @@
                 <p>為人子。孝為先。孝順兩字緊相聯。</p>
                 <p>勿惱怒。常使歡。暖衣飽食勿饑寒。</p>
                 <p>病醫藥。必自煎。即須嘗過獻親前。</p>
-                <p>夜不解衣朝不食。時時刻刻在身邊。</p>
-                <p>爾能孝順爾子孝。點點滴滴看簷前。</p>
+                <p>夜不解衣。朝不食。時時刻刻在身邊。</p>
+                <p>爾能孝順。爾子孝。點點滴滴看簷前。</p>
                 <p>大舜孝。帝位傳。二十四孝極周全。</p>
-                <p>在生不供奉。死後祭靈前。不孝子。</p>
+                <p>在生不供養。死後祭靈前。不孝子。</p>
                 <p>惹災愆。虎唅蛇咬病相纏。官刑牢獄遭充配。</p>
                 <p>水火之災實可憐。或自懸樑刀毒死。</p>
                 <p>不孝之人苦萬千。速速改。莫遲延。</p>
@@ -241,7 +241,7 @@
                 <p>廉者不受嗟來食。志士不飲盜之泉。</p>
                 <p>辭俸原憲潔。畏金楊震廉。</p>
                 <p>坐懷不亂柳下惠。閉戶無容魯仲連。</p>
-                <p>鷈食曾如糟李美。瓜祭何勝菜羹甜。</p>
+                <p>鶂食曾如糟李美。瓜祭何勝菜根甜。</p>
                 <p>俸祿止堪供禮義。舉家食費僅盤桓。</p>
                 <p>百篢抬回失節物。滿箱裝裹昧心錢。</p>
                 <p>笞杖流徒誰不怕。勸爾抬頭看上天。</p>
@@ -267,33 +267,33 @@
                 <p>地獄即城隍。三寶星日月。</p>
                 <p>救濟急難人。就是解冤結。</p>
                 <p>此四節。忠孝廉節。詳明甚切。後列二十四劫。</p>
-                <p>擎天頂地猛勇神。&nbsp&nbsp捧日舉月普照星。</p>
-                <p>列宿張星明朗神。&nbsp&nbsp騰雲駕霧飛度星。</p>
-                <p>驅雷掣電威烈神。&nbsp&nbsp呼風喚雨擾攘星。</p>
-                <p>降霜落雪變通星。&nbsp&nbsp賞善罰惡正直神。</p>
-                <p>輔德討罪忠義神。&nbsp&nbsp覺頑化迷感應神。</p>
+                <p>擎天頂地猛勇星。&nbsp&nbsp捧日舉月普照星。</p>
+                <p>列宿張星明朗神。&nbsp&nbsp騰雲駕霧飛度神。</p>
+                <p>驅雷掣電威烈星。&nbsp&nbsp呼風喚雨擾禳星。</p>
+                <p>降霜落雪變通神。&nbsp&nbsp賞善罰惡正直神。</p>
+                <p>輔德討罪忠義星。&nbsp&nbsp覺頑化迷感應星。</p>
                 <p>延生逐疫慈祥神。&nbsp&nbsp飛沙走石截路神。</p>
-                <p>翻江遶海五湖神。&nbsp&nbsp崩山頹嶺鐵甲神。</p>
+                <p>翻江遶海五湖星。&nbsp&nbsp崩山頹嶺鐵甲神。</p>
                 <p>凍水開冰結化星。&nbsp&nbsp抽芽綻葉發育星。</p>
                 <p>開花結果嬌媚星。&nbsp&nbsp長禾秀榖益穗星。</p>
                 <p>走獸飛禽捕捉星。&nbsp&nbsp魚蝦蟹鱉踴躍星。</p>
                 <p>飛跳諸蟲纏擾星。&nbsp&nbsp作文制字文昌星。</p>
                 <p>興兵布陣武曲星。&nbsp&nbsp造作工藝巧作神。</p>
-                <p>眾星聽令。各回本部變化發生。稽首神明。</p>
+                <p>眾星聽令。各回本部。變化發生。稽首神明。</p>
                 <p>無極聖眾。不可思議功德。</p>
                 <br>
                 <p>斗口王善(王天君)。欣奉。</p>
-                <p>漢室。漢壽亭侯。關聖大帝敕令。</p>
-                <p>大帝曰。吾曾言日在天上。心在人中。心者萬事之根本。</p>
+                <p>漢室漢壽亭侯。關聖大帝敕令。</p>
+                <p>大帝曰。吾曾言。日在天上。心在人中。心者萬事之根本。</p>
                 <p>儒家五常。道釋三寶。皆從心上生來。</p>
                 <p>仁莫大於忠孝。義莫大於廉節。二者五常之首。</p>
                 <p>聖人參贊化育者。此而已。</p>
                 <p>仙佛超神入化者。此而已。</p>
                 <p>自有天地以來。這箇無極太極之理。</p>
                 <p>渾然包羅。古今長懸。諸帝王聖賢仙佛。</p>
-                <p>萬經千典。只是明此理成此事而已。</p>
+                <p>萬經千典。只是明此理。成此事而已。</p>
 
-                <p>吾係紫微垣中火之正氣。</p>
+                <p>吾係紫微垣中。火之正氣。</p>
                 <p>火離明象也。故主文昌。</p>
                 <p>火又烈性也。故主武曲。</p>
                 <p>文主仁。仁首忠孝。</p>
@@ -303,43 +303,43 @@
                 <p>自戰國以來。吾出世匡君救民。</p>
                 <p>不得已以公善之心望世。此桃園經之所以現身說法也。</p>
                 <p>奈何世之人。真性不密。邪僻用心。見吾平常之言。</p>
-                <p>不曰聖人。不出此驕矜語。</p>
-                <p>則曰聖人。不出此淺近語。</p>
+                <p>不曰、聖人不出此驕矜語。</p>
+                <p>則曰、聖人不出此淺近語。</p>
                 <p>嗚呼。是必欲吾重作吾經。</p>
                 <p>待世之智愚賢不肖。皆盡讀之乎。</p>
                 <p>不獨此也。現在身列文儒。亦妄行指駁。</p>
-                <p>吾因周子凜禀。持誦多年。只得註解明白。</p>
+                <p>吾因周子凜禀持誦多年。只得註解明白。</p>
                 <p>如再有擅行詆毀者。輕則令瘟火滅之。</p>
                 <p>重則命周倉（將軍）斬之。毋悔。</p>
 
 
-                <p>明聖經本係夢與玉泉寺僧。僧醒而傳述。</p>
-                <p>首句漢漢。上一漢字乃代名。即大漢也。</p>
-                <p>漢壽亭。係地名也。其先噣咐人人誦此經者。</p>
-                <p>是以效驗歆動人心也。中言精忠沖日月。</p>
+                <p>明聖經。本係夢與玉泉寺僧。僧醒而傳述。</p>
+                <p>首句漢漢。上一漢字。乃代名、即大漢也。</p>
+                <p>漢壽亭。係地名也。其先囑咐人人誦此經者。</p>
+                <p>是以效驗歆動人心也。中、言精忠沖日月。</p>
                 <p>義氣貫乾坤。即孟子所謂塞乎天地也。</p>
                 <p>曰面赤鬚長者。即大學所謂心廣體胖。</p>
                 <p>孟子所謂睟面盎背也。至投胎轉劫之說。</p>
                 <p>儒者不言。不知釋道兩門。並非無據。</p>
                 <p>試歷查古今。借尸還魂。靈殼轉寄。</p>
-                <p>異物入胎。豈少也哉。吾言在列國在漢</p>
-                <p>與在唐宋之言。實非誑也。諸君試對核之。</p>
-                <p>再四章言忠。文武臣僚皆當敬體。</p>
+                <p>異物入胎。豈少也哉。吾言在列國。</p>
+                <p>在漢與在唐宋之言。實非誑也。諸君試對核之。</p>
+                <p>再四章言忠。文武臣僚。皆當敬體。</p>
                 <p>則是三代以上之臣也。夔龍.伊皋其人也。</p>
-                <p>言孝則曰。不解衣不食。則侍膳寢門。</p>
-                <p>文王其人也。滴水還源。孫又效子。則子孫保之。</p>
-                <p>大舜其人也。說到二十四孝。古今昭如日月。</p>
+                <p>言孝則曰。不解衣不食。則侍膳寢門。文王其人也。</p>
+                <p>滴水還源。孫又效子。則子孫保之。大舜其人也。</p>
+                <p>說到二十四孝。古今昭如日月。</p>
                 <p>格天地。動鬼神。豈非確然可據者哉。</p>
                 <p>廉在周禮。以六計為定。實從義字中生。</p>
                 <p>故為愚昧者痛斥。而廉泉盜水。舉一二而已括之也。</p>
-                <p>節如竹.竹有筠也。如月.月有度也。</p>
-                <p>非筠則溷。非度則昏。古今大節不踰者。於義殆盡。</p>
-                <p>後遣諸神鑒察。以使速應。吾亦大費婆心。</p>
+                <p>節如竹。竹有筠也。如月、月有度也。</p>
+                <p>非筠則溷。非度則昏。古今大節不踰者。於義怠盡。</p>
+                <p>後遺諸神鑒察。以使速應。吾亦大費悲心。</p>
                 <p>以吾為驕。吾固不辭。以吾為淺。吾亦不辭。</p>
                 <p>但願人人從此驕言淺言做去。一一果自信於心中。</p>
-                <p>然後探妙之理。入上聖之班。吾亦不怪。而且快然也。</p>
+                <p>然後探玄妙之理。入上聖之班。吾亦不怪。而且快然也。</p>
                 <p>將此語著</p>
-                <p>靈官傳世之知。為此述告周宰人等。</p>
+                <p>靈官傳世知之。為此述告周宰人等。</p>
                 <p>一心體此。以心印心。心在人中。日在天上。欽哉勿忽。</p>
                 <br>
                 <h1>收經讚</h1>
@@ -349,90 +349,33 @@
                 <p>大聖伏魔蕩寇救苦救難大天尊。(三稱)</p>
                 <br><br>
 
-                <h1>南天聖帝關夫子聖諭</h1>
-                <br>
-                <p>風瀟瀟。雨濛濛。辭金闕。下瓊宮。</p>
-                <p>燦燦中天烈日。凜凜八面威風。</p>
-                <p>大義沖星斗。正氣貫長虹。</p>
-                <p>馬騎赤兔。刀偃青龍。</p>
-                <p>離合英雄乾坤內。相逢兄弟古城中。</p>
-                <p>大業既定三分。壯志未成一統。</p>
-                <p>嘆江山幾次改動。蒙恩榮祀典崇隆。</p>
-                <p>憫蒼生駕動鸞輿。念赤子路出蠶叢。</p>
-                <p>觀紅塵無限慒橦。見黑氣甚是惡凶。</p>
-                <p>忠厚和平堪恕。機巧變詐難容。盡皆是。</p>
-                <p>為子不孝。為臣不忠。</p>
-                <p>為兄不友。為弟不恭。</p>
-                <p>夫婦不和順。朋友不信從。</p>
-                <p>習熟了驕傲氣象。養成那刻薄心胸。</p>
-                <p>正道弗由。僥倖作用。不存天理。哄騙愚盲。</p>
-                <p>做出許多傀儡。造成無數巧功。</p>
-                <p>只圖肥潤自己。那知惱怒天公。</p>
-                <p>降下了諸般劫數。收伏那惡人種種。</p>
-                <p>水火刀兵未了。疾病瘟皇(打不出來疒+皇)又逢。</p>
-                <p>鬼哭神嚎。山搖地動。</p>
-                <p>轉瞬間三九堪痛。曲江上火龍夾攻。</p>
-                <p>那時節。</p>
-                <p>父不見其子。弟不顧其兄。</p>
-                <p>夫婦分南北。親戚各東西。</p>
-                <p>百年事業成何用。萬古功名總是空。</p>
-                <p>某(聖)不忍。生民遭塗炭。</p>
-                <p>某(聖)不忍。善惡無異同。</p>
-                <p>幾次泣叩</p>
-                <p>靈霄寶殿中。一心心只想劫數消融。</p>
-                <p>鬢髮班班白。血淚點點紅。</p>
-                <p>一誠達聖聰。五劫漸緩鬆。</p>
-                <p>又感動三星臨凡塵。八仙出崆峒。</p>
-                <p>聖佛神真。廣大帡幪。處處飛鸞。</p>
-                <p>振瞶發聾。諄諄諭文。汗牛充棟。</p>
-                <p>不惟加毀謗。而且置塵封。</p>
-                <p>化不轉囂囂世道。挽不回蚩蚩愚氓。</p>
-                <p>想當初錯把拏玉旨手捧。</p>
-                <p>到今朝又有何顏對玄穹。</p>
-                <p>沒奈何。再把這脣舌弄。</p>
-                <p>眾凡民。一個個須諒某(聖)苦衷。</p>
-                <p>一不要爾銀錢。二不要爾齋供。</p>
-                <p>只要爾。</p>
-                <p>父慈子孝。兄友弟恭。</p>
-                <p>夫婦和順。君義臣忠。</p>
-                <p>方便時時行。經典多多誦。</p>
-                <p>聖諭宣講。神訓遵崇。</p>
-                <p>從此六戒保身。自今三畏參躬。</p>
-                <p>做一位頂天立地大豪傑。</p>
-                <p>為一個調元贊化大英雄。</p>
-                <p>切勿為善不勇。切勿畏難不終。</p>
-                <p>功行滿。超登三界。善果圓。逕上九重。</p>
-                <p>朝金闕。謁瓊宮。聖神歡悅。仙佛隆重。</p>
-                <p>其樂也洩洩。其喜也融融。</p>
-                <p>蓋天古佛。昭明翼漢大天尊。(三稱)</p>
-                <br><br>
                 <h1>關聖帝君覺世真經</h1>
                 <br>
                 <p>帝君曰。人生在世。貴盡忠孝節義等事。</p>
-                <p>方於人道無愧。可立身於天地之間。若不盡忠孝節義等事。</p>
+                <p>方於人道無愧。可立於天地之間。若不盡忠孝節義等事。</p>
                 <p>身雖在世。其心己死。是謂偷生。凡人心即神。</p>
-                <p>神即心。無愧心。無愧神。若是欺心。便是欺神。</p>
-                <p>故君子三畏四知。以慎其獨。勿謂暗室可欺。</p>
-                <p>屋漏可愧。一動一靜。神明鑒察。十手十目。理所必至。</p>
+                <p>神即心。無愧心、無愧神。若是欺心。便是欺神。</p>
+                <p>故、君子三畏四知。以慎其獨。勿謂暗室可欺。</p>
+                <p>屋漏可窺。一動一靜。神明鑒察。十手十目。理所必至。</p>
                 <p>況報應昭昭。不爽毫髮。淫為萬惡首。孝為百行原。</p>
-                <p>但有逆理於心有愧者。勿謂有利而行之。</p>
-                <p>凡有合理於心無愧者。勿謂無利而不行。</p>
+                <p>但有逆理。於心有愧者。勿謂有利而行之。</p>
+                <p>凡有合理。於心無愧者。勿謂無利而不行。</p>
                 <p>若負吾教。請試吾刀。</p>
-                <p>敬天地。禮神明。奉祖先。孝父母。守王法。重師尊。</p>
-                <p>愛兄弟。信朋友。睦宗族。和鄉鄰。別夫婦。教子孫。</p>
+                <p>敬天地。禮神靈。奉祖先。孝雙親。守王法。重師尊。</p>
+                <p>愛友弟。信朋友。睦宗族。和鄉鄰。別夫婦。教子孫。</p>
                 <p>時行方便。廣積陰功。救難濟急。恤孤憐貧。創修廟宇。</p>
-                <p>印造經文。捨藥施茶。戒殺放生。造橋修路。矜孤拔困。</p>
-                <p>重栗惜福。排難解紛。捐資成美。垂訓教人。冤仇解釋。</p>
-                <p>斗秤公平。親近有德。遠避凶人。隱惡揚善。利物利人。</p>
+                <p>印造經文。捨藥施茶。戒殺放生。造橋修路。矜寡拔困。</p>
+                <p>重粟惜福。排難解紛。捐資成美。垂訓教人。冤讎解釋。</p>
+                <p>斗秤公平。親近有德。遠避凶人。隱惡揚善。利物救民。</p>
                 <p>回心向道。改過自新。滿腔仁慈。惡念不存。一切善事。</p>
                 <p>信心奉行。人雖不見。神已早聞。加福增壽。添子益孫。</p>
-                <p>災消病減。禍患不侵。人物咸寧。吉星照臨。若存惡心。</p>
-                <p>不行善事。淫人妻女。破人婚姻。壞人名節。嫉人技能。</p>
+                <p>災消病癒。禍患不侵。人物咸甯。吉星照臨。若存惡心。</p>
+                <p>不行善事。淫人妻女。破人婚姻。壞人名節。妒人技能。</p>
                 <p>謀人財產。唆人爭訟。損人利己。肥家潤身。恨天怨地。</p>
-                <p>罵雨呵風。謗聖毀賢。滅像欺神。宰殺牛犬。污穢字紙。</p>
-                <p>恃勢凌善。倚富欺貧。離人骨肉。間人兄弟。不信正道。</p>
+                <p>罵雨呵風。謗聖毀賢。滅像欺神。宰殺牛犬。穢溺字紙。</p>
+                <p>恃勢辱善。倚富壓貧。離人骨肉。間人兄弟。不信正道。</p>
                 <p>姦盜邪淫。好尚奢詐。不重勤儉。輕棄五穀。不報有恩。</p>
-                <p>瞞心昧己。大斗小秤。假立邪教。引誘愚人。詭說升天。</p>
+                <p>瞞心昧己。大斗小秤。假立邪教。引誘愚人。詭說昇天。</p>
                 <p>歛物行淫。明瞞暗騙。橫言曲語。白日詛咒。背地謀害。</p>
                 <p>不存天理。不順人心。不信報應。引人作惡。不修片善。</p>
                 <p>行諸惡事。官詞口舌。水火盜賊。惡毒瘟疫。生敗產蠢。</p>
@@ -440,7 +383,7 @@
                 <p>毫髮不紊。善惡兩途。禍福攸分。行善福報。作惡禍臨。</p>
                 <p>吾作斯語。願人奉行。言雖淺近。大益身心。戲侮吾言。</p>
                 <p>斬首分形。有能持誦。消凶聚慶。求子得子。求壽得壽。</p>
-                <p>富貴功名。皆能有成。凡有所求。如意而獲。萬禍雪消。</p>
+                <p>富貴功名。皆能有成。凡有所祈。如意而獲。萬禍雪消。</p>
                 <p>千祥雲集。諸如此福。惟善可致。吾本無私。惟佑善人。</p>
                 <p>眾善奉行。毋怠厥志。</p>
                 
