--- a/chance/medicine_info.html
+++ b/chance/medicine_info.html
@@ -69,6 +69,7 @@
                 <p>麻黃: "麻黃根"與"麻黃"不同,前者為根部後者為莖部</p>
                 <h1>一字真</h1>
                 <p>芽黃: 大黃</p>
+                <p>寸文: 麥文冬</p>
             </div>
 	    </div>
 	</div>
