--- a/chance/pageHeader.html
+++ b/chance/pageHeader.html
@@ -41,6 +41,8 @@
             <li><a href="bookChengHuang.html">城隍經</a></li>
             <li><a href="bookHuaTuo.html">華佗經</a></li>
             <li><a href="bookShengYu.html">聖諭</a></li>
+            <li><a href="bookInducing.html">感應篇</a></li>
+            <li><a href="bookQuiet.html">清靜經</a></li>
             <li><a href="bookYinZhi.html">陰騭文</a></li>
             <li><a href="bookDiscipleRules.html">弟子規</a></li>
           </ul>
