--- a/chance/bookSanGuan.html
+++ b/chance/bookSanGuan.html
@@ -39,7 +39,7 @@
 	  	<div class="page-header">
 	        <h1>三官感應妙經</h1>
 	        <div class="lead">
-                <h1>開經讚</h1>
+                <!-- <h1>開經讚</h1>
                 <br>
                 <p>天地水府&nbsp&nbsp三界高真&nbsp&nbsp無邊法顯大慈仁</p>
                 <p>濟度應良辰&nbsp&nbsp福被萬民&nbsp&nbsp拔罪出迷津&nbsp&nbsp皈命</p>
@@ -106,7 +106,7 @@
                 <h1>太上三元賜福赦罪解厄消災延生保命妙經</h1>
                 <br>
                 <p>爾時</p>
-                <p>救苦大仙。</p>
+                <p>救苦大仙。</p> -->
             </div>
 	    </div>
 	</div>
