--- a/chance/medicine_info.html
+++ b/chance/medicine_info.html
@@ -67,9 +67,13 @@
                 <p>黃岑: 黃芩??</p>
                 <p>刈花: 葛花??</p>
                 <p>麻黃: "麻黃根"與"麻黃"不同,前者為根部後者為莖部</p>
+                <p>大魴: 魴魚</p>
+                <p>靈脂: 五靈脂</p>
+                
                 <h1>一字真</h1>
                 <p>芽黃: 大黃</p>
                 <p>寸文: 麥文冬</p>
+
             </div>
 	    </div>
 	</div>
