--- a/chance/pageHeader.html
+++ b/chance/pageHeader.html
@@ -53,6 +53,7 @@
             <li><a href="medicine_info.html" class="active">藥籤藥名</a></li>
             <li><a href="man_medicine.html">男科</a></li>
             <li><a href="woman_medicine.html">女科</a></li>
+            <li><a href="real_word_100.html">一字真百首</a></li>
           </ul>
         </li><!--/.dropdown -->
       </ul>
