--- a/chance/choose_chance.html
+++ b/chance/choose_chance.html
@@ -51,7 +51,7 @@
 				<br>
 				<div class="col-xs-4"><button id="start" type="button" class="btn btn-all btn-primary" onclick="getChance()">求籤</button></div>
 				<div class="col-xs-4"><button id="end" type="button" class="btn btn-all btn-danger" onclick="finish()" style="display:none">看籤詩</button></div>
-				<div class="col-xs-4"><button id="clean" type="button" class="btn btn-all btn-warning" onclick="clean()" style="display:none">清空</button></div>
+				<div class="col-xs-4"><button id="add" type="button" class="btn btn-all btn-warning" onclick="add()" style="display:none">新增信徒</button></div>
 			</div>
 			<br>
 			<br>
@@ -98,11 +98,6 @@
 	
 	function getChance(){
 
-		if(isFinish){
-			clean();
-			isFinish = false;
-		}
-
 		no = Math.floor((Math.random() * 100) + 1);
 		if(tempList.indexOf(no) > 0){
 			getChance();
@@ -112,13 +107,14 @@
 			tempList.push(no);
 			showYesNo();
 		}
-		$('#clean').hide();
+		hideEventBtn();
 	}
 
 	function saveChance(){
 		if(chooseList.indexOf(no) == -1 && no != 0){
 			chooseList.push(no);
 		}
+		$('#start').show();
 		$('#end').show();
 		hideYesNo();
 	}
@@ -128,25 +124,24 @@
 			chooseList.push(no);
 		}
 		$('#number').text('');
+		$('#start').show();
 		hideYesNo();
 	}
 
 	function finish(){
 		$('#number').text('');
-		//$('#namelist').append('<li role="presentation" class="active"><a href="#">信徒1</a></li>');
 		for(var i = 0; i < chooseList.length; i++){
 			$('#answer').append('<p class="lead" >' + chanceList[chooseList[i]-1] + '</p>');
 			console.log(i);
 		}
-		$('#end').hide();
-		// $('#clean').show();
+		hideEventBtn();
 		hideYesNo();
 		//move to namelist
 		$body.animate({
 			scrollTop: $('#namelist').offset().top
 		}, 1000);
 
-		isFinish = true;
+		$('#add').show();
 	}
 
 	function showYesNo(){
@@ -159,16 +154,14 @@
 		$('#no').hide();
 	}
 
-	function clean(){
-		$('#namelist').text('');
-		$('#answer').text('');
-		chooseList.clear();
-		tempList.clear();
-		$('#clean').hide();
+	function hideEventBtn(){
+		$('#start').hide();
+		$('#end').hide();
+		$('#add').hide();
 	}
 
 	function add(){
-
+		window.open("http://bensontsai0.github.io/chance/choose_chance.html");
 	}
 
 	function changeType(chanceType){
