--- a/chance/bookDaDong.html
+++ b/chance/bookDaDong.html
@@ -59,7 +59,7 @@
                 <p>古洞引讚真經。</p>
                 <p>梓潼帝君讚曰。桃源古洞真經。</p>
                 <p>天地正氣。道德長存。金闕內相。孚佑帝君。</p>
-                <p>純陽一炁。妙道天尊。慈悲下界醒喚沉淪。</p>
+                <p>純陽一炁。妙道天尊。慈悲下界。醒喚沉淪。</p>
                 <p>或歌或曲。或詩或文。婆心切切。戒之諄諄。</p>
                 <p>千千集首。萬萬典型。朗讀經偈。神服鬼欽。</p>
                 <p>辟邪除穢。劍斬妖精。葫蘆發火。迺祥迺禎。</p>
@@ -129,7 +129,7 @@
                 <p>積些家業如珠寶。難贖冤愆上天堂。何不學成袁了凡。</p>
                 <p>可脫苦海渺茫茫。不孝子。雷電攻。好淫悖逆經免誦。</p>
                 <p>致引天庭降災殃。為人知禮必知義。尊重三綱及五常。</p>
-                <p>勤修德。積善功。吾經朗誦恭叩請</p>
+                <p>勤修德。積善功。吾經朗誦。恭叩請</p>
                 <p>金闕內相妙道天尊 (三稱)</p>
             </div>
 	    </div>
