--- a/chance/bookKaiJingZhou.html
+++ b/chance/bookKaiJingZhou.html
@@ -40,6 +40,13 @@
 	        <h1>開經咒</h1>
 	        <div class="lead">
 
+                <h1>淨三業咒</h1>
+                <br>
+                <p>身中諸內境。三萬六千神。動作履行藏。前劫並後業。</p>
+                <p>願我身自在。常住三寶中。當於劫壞時。我身長不滅。</p>
+                <p>誦此真文時。身心口業皆清淨。急急如律令。</p>
+                <br>
+
                 <h1>淨心神咒</h1>
                 <br>
                 <p>太上臺生。應變無停。驅邪縛魅。保命護身。</p>
@@ -62,12 +69,7 @@
                 <p>急急如律令。</p>
                 <br>
 
-                <h1>淨三業咒</h1>
-                <br>
-                <p>身中諸內境。三萬六千神。動作履行藏。前劫並後業。</p>
-                <p>願我身自在。常住三寶中。當於劫壞時。我身長不滅。</p>
-                <p>誦此真文時。身心口業皆清淨。急急如律令。</p>
-                <br>
+                
 
                 <h1>淨壇咒</h1>
                 <br>
@@ -79,10 +81,10 @@
 
                 <h1>淨天地解穢咒</h1>
                 <br>
-                <p>天地自然。穢氣分散。洞中玄虛。晃朗太元。</p>
+                <p>天地自然。穢氣紛散。洞中玄虛。晃朗太元。</p>
                 <p>八方威神。使我自然。靈寶符命。普告九天。</p>
-                <p>乾羅嗒哪。洞罡太元。斬妖縛邪。度人萬千。</p>
-                <p>中山神咒。元始玉文。持誦一遍。卻病延年。</p>
+                <p>乾羅嗒哪。洞罡太玄。斬妖縛邪。度人萬千。</p>
+                <p>中山神咒。元始玉文。受持一遍。卻病延年。</p>
                 <p>按行五嶽。八海知聞。魔王束手。侍衛我軒。</p>
                 <p>凶穢消散。道氣長存。急急如律令。</p>
                 <br>
