--- a/chance/bookZaoWang.html
+++ b/chance/bookZaoWang.html
@@ -55,9 +55,9 @@
                 <p>一遍三功神記錄 終身持唸格蒼穹</p>
                 <p>心體力行多善果 時時足下起祥雲</p>
                 <p>生享榮華添百福 死歸神道蔭兒孫</p>
-                <p>今經一卷非閒說 人世休將做具文</p>
+                <p>金經一卷非閒說 人世休將做具文</p>
                 <p>叮嚀切切留心記 天大福基在此敦</p>
-                <p>男婦果能遵教訓 修功積德姓名芳</p>
+                <p>男婦果能遵教訓 修功積德姓名芬</p>
                 <p>(金經誦畢焚香九叩禮續誦)     </p>
                 <br><br>
                 <h1>灶王神經</h1>
@@ -97,8 +97,8 @@
                 <p>兇惡男女遭大難 頃刻急症入幽冥</p>
                 <p>死在陰司還受罪 你想逃脫萬不能</p>
                 <p>罪滿轉輪王發放 善惡報應見分明</p>
-                <p>大善投胎大富貴 中等頭胎中等人</p>
-                <p>大惡投生變畜類 小惡投生變賤貧</p>
+                <p>大善投生大富貴 中善投生中等人</p>
+                <p>大惡脫生變畜類 小惡投生變賤貧</p>
                 <p>或是癡聾與瘖啞 牛馬豬羊去還人</p>
                 <p>灶王今把凡民勸 依得神言是福人</p>
                 <p>虧心除盡平生福 奸巧短壽把命傾</p>
@@ -107,16 +107,16 @@
                 <p>真言奏上玉皇尊 惡惡善善從直講</p>
                 <p>再不隱瞞半毫分 大秤小斗心不足</p>
                 <p>還在人前使假銀 扭毫捏索良心喪</p>
-                <p>買賣欺善不公平 淫人婦女罪不輕</p>
+                <p>買賣欺善不公平 淫人婦女罪不小</p>
                 <p>貪人財物喪良心 暗地把人來唆弄</p>
                 <p>他再中間做好人 有的仗勢來欺弱</p>
                 <p>欺老罵少起惡心 打僧罵道怨天地</p>
-                <p>勸人開葷罪不輕 作賤五穀該何罪</p>
+                <p>勸人開齋罪不輕 作賤五穀該何罪</p>
                 <p>貪圖口腹忍傷生 在生之時不自問</p>
                 <p>死後陰司見假真 地獄受盡千般苦</p>
                 <p>陽世那個說是真 敲瞌他人錢合米</p>
                 <p>變做牛馬還他人 爾看一報還一報</p>
-                <p>奉勸男女仔細想 莫把吾言當假真</p>
+                <p>奉勸男女仔細想 莫把吾言當假情</p>
                 <p>笑順父母為第一 忠君愛民一等人</p>
                 <p>第二須當敬兄長 第三夫婦要和平</p>
                 <p>朋友說話要信實 奴僕寬恕可在心</p>
@@ -127,7 +127,7 @@
                 <p>灶王勸人費心苦 看民回心不回心</p>
                 <p>偈曰</p>
                 <p>東廚司命君 留下灶王經 見面抄一本 子孫享科名</p>
-                <p>眼下無災厄 禍患不臨門 吾神八月壽 初三記在心</p>
+                <p>眼下無災厄 禍事不臨門 吾神八月壽 初三記在心</p>
                 <p>若把吾經唸 齋戒忌油葷 初一並十五 各自要誠心</p>
                 <p>信者有好處 不信自墮身 死後見報復 報應見假真</p>
                 <p>勸人抄十卷 解去一世冤 勸人抄百本 九祖得升天</p>
@@ -144,7 +144,7 @@
                 <p>不和妯娌 不敬夫君 暗唆丈夫 遂把家分</p>
                 <p>若分家業 不讓分文 爾為男子 罔有乃身</p>
                 <p>放僻邪侈 奸盜邪淫 縱使妻子 辱罵尊親</p>
-                <p>不分內外 不別尊卑 好尚作偽 欺哄愚人</p>
+                <p>不分內外 不別尊卑 好尚詐偽 欺哄愚人</p>
                 <p>閑遊懶惰 不重儉勤 謀人田產 百計橫強</p>
                 <p>貧不安分 詐索金銀 至於吾灶 五祀獨尊</p>
                 <p>或傍牛圈 或對豬門 近或雞圈 臭氣難聞</p>
