--- a/chance/bookKaiJingZhou.html
+++ b/chance/bookKaiJingZhou.html
@@ -69,32 +69,30 @@
                 <p>急急如律令。</p>
                 <br>
 
-                
+                <h1>淨天地解穢咒</h1>
+                <br>
+                <p>天地自然。穢氣紛散。洞中玄虛。晃朗太元。</p>
+                <p>八方威神。使我自然。靈寶符命。普告九天。</p>
+                <p>乾羅嗒哪。洞罡太玄。斬妖縛邪。度人萬千。</p>
+                <p>中山神咒。元始玉文。授持一遍。卻病延年。</p>
+                <p>按行五嶽。八海知聞。魔王束手。侍衛我軒。</p>
+                <p>凶穢消散。道氣長存。急急如律令。</p>
+                <br>
+
+                <h1>安神咒</h1>
+                <br>
+                <p>元始安鎮。普告萬靈。嶽瀆真官。上下祇神。</p>
+                <p>左社右稷。不得妄驚。回向正道。內外澄清。</p>
+                <p>各安方位。備守家庭。太上有命。搜捕邪精。</p>
+                <p>護法神王。保衛誦經。皈依大道。元亨利貞。</p>
+                <p>急急如律令。</p>
+                <br>
 
                 <h1>淨壇咒</h1>
                 <br>
                 <p>太上說法時。金鐘響玉音。百穢藏九地。群魔護騫林。</p>
                 <p>天花散法雨。法鼓振迷沉。諸天賡善哉。金童舞瑤琴。</p>
                 <p>願傾八霞光。照依皈依心。蚤法大法稿。翼侍五雲深。</p>
-                <p>急急如律令。</p>
-                <br>
-
-                <h1>淨天地解穢咒</h1>
-                <br>
-                <p>天地自然。穢氣紛散。洞中玄虛。晃朗太元。</p>
-                <p>八方威神。使我自然。靈寶符命。普告九天。</p>
-                <p>乾羅嗒哪。洞罡太玄。斬妖縛邪。度人萬千。</p>
-                <p>中山神咒。元始玉文。受持一遍。卻病延年。</p>
-                <p>按行五嶽。八海知聞。魔王束手。侍衛我軒。</p>
-                <p>凶穢消散。道氣長存。急急如律令。</p>
-                <br>
-
-                <h1>安土地神咒</h1>
-                <br>
-                <p>元始安鎮。普告萬靈。嶽瀆真官。上下祇神。</p>
-                <p>左社右稷。不得妄驚。回向正道。內外澄清。</p>
-                <p>各安方位。備守家庭。太上有命。搜捕邪精。</p>
-                <p>護法神王。保衛誦經。皈依大道。元亨利貞。</p>
                 <p>急急如律令。</p>
                 <br>
 
