--- a/chance/bookZaoWang.html
+++ b/chance/bookZaoWang.html
@@ -97,7 +97,7 @@
                 <p>兇惡男女遭大難 頃刻急症入幽冥</p>
                 <p>死在陰司還受罪 你想逃脫萬不能</p>
                 <p>罪滿轉輪王發放 善惡報應見分明</p>
-                <p>大善投生大富貴 中善投生中等人</p>
+                <p>大善投胎大富貴 中善投生中等人</p>
                 <p>大惡脫生變畜類 小惡投生變賤貧</p>
                 <p>或是癡聾與瘖啞 牛馬豬羊去還人</p>
                 <p>灶王今把凡民勸 依得神言是福人</p>
