--- a/chance/medicine_info.html
+++ b/chance/medicine_info.html
@@ -70,6 +70,7 @@
                 <p>大魴: 魴魚</p>
                 <p>靈脂: 五靈脂</p>
                 <p>香附: 香伏</p>
+                <p>福附: 龍眼子(曬乾)</p>
                 <h1>一字真</h1>
                 <p>芽黃: 大黃</p>
                 <p>寸文: 麥文冬</p>
