--- a/chance/get_chance.html
+++ b/chance/get_chance.html
@@ -38,7 +38,7 @@
     <div class="container">
 	  	<div class="starter-template">
 	  		<div class="row">
-		        <div class="col-xs-12 input-group-lg "><input id="number" type="text" class="form-control" placeholder="請輸入籤詩號碼(用空白隔開)  範例: 1 3 4 6" aria-label="請輸入籤詩號碼(用空白隔開)  範例: 1 3 4 6" aria-describedby="basic-addon2"></div>
+		        <div class="col-xs-12 input-group-lg "><input id="number" type="text" class="form-control" placeholder="輸入籤詩號碼(用空白隔開)範例:1 3" aria-label="輸入籤詩號碼(用空白隔開)  範例: 1 3 4 6" aria-describedby="basic-addon2"></div>
 		    </div>
 		    <br>
 		    <br>
