--- a/chance/medicine_info.html
+++ b/chance/medicine_info.html
@@ -58,23 +58,25 @@
                 <p>天毛: 香茅</p>
                 <p>枸杞: 甘杞(品質較好的)</p>
                 <p>金銀花: 銀花, 忍冬</p>
-                <p>秦艽: 蓁芄??</p>
-                <p>益智子: 益智仁, 益智??</p>
-                <p>青蒿: 菁蒿???</p>
-                <p>蔓荊子: 蔓京, 蔓荊??</p>
-                <p>梔子: 梔子(生用), 黃梔子(炒焦), 黑梔子(炒炭)???</p>
-                <p>枳實: 只實, 只壳???</p>
-                <p>黃岑: 黃芩??</p>
-                <p>刈花: 葛花??</p>
+                <p>秦艽: 蓁芄</p>
+                <p>益智子: 益智仁, 益智</p>
+                <p>青蒿: 菁蒿</p>
+                <p>蔓荊子: 蔓京, 蔓荊</p>
+                <p>梔子: 梔子(生用), 黃梔子(炒焦), 黑梔子(炒炭)</p>
+                <p>枳實: 只實, 只壳</p>
+                <p>條岑: 黃芩、黃岑</p>
+                <p>刈花: 葛花</p>
                 <p>麻黃: "麻黃根"與"麻黃"不同,前者為根部後者為莖部</p>
                 <p>大魴: 魴魚</p>
                 <p>靈脂: 五靈脂</p>
                 <p>香附: 香伏</p>
                 <p>福附: 龍眼子(曬乾)</p>
+                <p>祠陳: 鉤陳、鉤藤</p>
                 <h1>一字真</h1>
                 <p>芽黃: 大黃</p>
                 <p>寸文: 麥文冬</p>
-
+                <p>(17)福貝: 福員</p>
+                <p>(98)北羌: 乾薑</p>
             </div>
 	    </div>
 	</div>
