--- a/chance/bookKaiJingZhou.html
+++ b/chance/bookKaiJingZhou.html
@@ -104,8 +104,8 @@
                 
                 <h1>金光神咒</h1>
                 <br>
-                <p>天地玄宗。萬氣本根。廣修萬劫。證我神通。</p>
-                <p>三界內外。惟道獨尊。體有金光。覆映我身。</p>
+                <p>天地玄宗。萬氣本根。廣修萬劫。證吾神通。</p>
+                <p>三界內外。惟道獨尊。體有金光。覆映吾身。</p>
                 <p>視之不見。聽之不聞。包羅天地。養育群生。</p>
                 <p>誦持萬遍。身有光明。三界侍衛。五帝伺迎。</p>
                 <p>萬神朝禮。役使雷霆。鬼妖喪膽。精怪亡形。</p>
