--- a/chance/bookDaDong.html
+++ b/chance/bookDaDong.html
@@ -86,7 +86,7 @@
                 <p>使人各遵行。經文雖淺近。不可視為輕。</p>
                 <p>道存天地同休戚。德配乾坤不壞身。</p>
                 <p>任吾敕召天廷將。憑吾催請地府神。日遊天下稽善惡。</p>
-                <p>夜到寰區談果因。值日值時將。值時值日兵。</p>
+                <p>夜到寰區談果因。值年值月將。值日值時兵。</p>
                 <p>三山五嶽聽號令。五湖四海各遵行。</p>
                 <p>三光照耀。日月斗星。六丁六甲。值日天兵。</p>
                 <p>二十八宿。聽經號令。</p>
@@ -112,7 +112,7 @@
                 <p>若求生產厄。房中產麒麟。求子生丹桂。</p>
                 <p>求運好前程。行人經朗誦。鬼賊不相侵。</p>
                 <p>三江四海上。聽得真經聲。大風並大浪。</p>
-                <p>風波立刻平。照吾的言語。一一皆有靈。</p>
+                <p>風波立刻平。照吾經中語。一一皆有靈。</p>
                 <p>口誦心而維。必得把善施。世人可瞞騙。</p>
                 <p>青天不可欺。欲挽人覺悟。神仙下瑤池。</p>
                 <p>或歌或作賦。或曲並吟詩。聲聲喚人醒。</p>
