--- a/chance/bookHuaTuo.html
+++ b/chance/bookHuaTuo.html
@@ -39,7 +39,8 @@
 	  	<div class="page-header">
 	        <h1>華陀醒世七寶金經</h1>
 	        <div class="lead">
-                <h1>華陀醒世七寶金經  志心皈命禮</h1>
+                <h1>華陀醒世七寶金經</h1>
+                <h1>志心皈命禮</h1>
                 <br>
                 <p>天地生人有七寶&nbsp&nbsp全於一身調養好</p>
                 <p>血氣精神體髮膚&nbsp&nbsp吩咐生民重寶珠</p>
