--- a/chance/bookDaDong.html
+++ b/chance/bookDaDong.html
@@ -71,7 +71,7 @@
                 <p>渡登彼岸。拔上天梯。示引南北。指人東西。</p>
                 <p>天君鑒察。柳將查稽。稽查賜福。福壽綿長。</p>
                 <p>金闕內相。道號純陽。葫蘆發火。顯赫立功。</p>
-                <p>威聲普化。閃閃電光。日月斗星。雷雨雲風。</p>
+                <p>威聲普化。閃閃電光。日月星斗。雷雨雲風。</p>
                 <p>三昧真火。一炁青鋒。辟邪滅怪。魑魅魎魍。</p>
                 <p>經聲朗誦。一切皆空。玉樓鑒訂。南天南宮。</p>
                 <p>天歡地喜。鬼沒神藏。乾坎艮震。巽離坤宮。</p>
