--- a/chance/woman_medicine.html
+++ b/chance/woman_medicine.html
@@ -58,7 +58,7 @@
 	<script>
     function init(){
         for(var i = 0; i < 100; i++){
-            $('#chance').append('<p class="clip_wo_first" id="no'+ (i+1) +'" ><img src="img/woman'+ (i+1) +'.jpg" ></p>');
+            $('#chance').append('<p class="clip_first" id="no'+ (i+1) +'" ><img src="img/woman'+ (i+1) +'.jpg" ></p>');
         }
     }
 
