--- a/chance/bookBeiDou.html
+++ b/chance/bookBeiDou.html
@@ -39,7 +39,99 @@
 	  	<div class="page-header">
 	        <h1>北斗延壽妙經</h1>
 	        <div class="lead">
-               
+                <h1>太上玄靈北斗本命延生真經</h1>
+                <br>
+                <p>爾時。太上老君。於永壽元年正月七日。在太清境上。太極宮中。</p>
+                <p>觀見眾生。億劫漂沉。周廻生死。或居人道。生在中華。或生夷狄之中。</p>
+                <p>或生蠻戎之內。或富或貴。或賤或貧。暫假因緣。墮於地獄。為無定故。</p>
+                <p>罪業牽纏。魂繫陰司。受苦滿足。人道將違。生居畜獸之中。或生禽蟲之屬。</p>
+                <p>轉乖人道。難復人身。如此沉淪。不自知覺。為先世迷真之故。受此輪廻。</p>
+                <p>乃以哀憫之心。分身教化。化身下降。至於蜀都。地神湧出。扶一玉局。</p>
+                <p>而作高座。於是老君昇玉局座。授與天師真人。北斗本命經訣。廣宣要法。普濟眾生。</p>
+                <p>是時。老君告天師曰。人身難得。中土難生。假使得生。正法難遇。</p>
+                <p>多迷真道。多入邪宗。多種罪根。多肆巧詐。多恣淫殺。多好羣情。</p>
+                <p>多縱貪瞋。多沉地獄。多失人身。如此等緣。眾生不悟。不知正道。</p>
+                <p>迷惑者多。我今哀見此等眾生故。垂法教。為說良緣。令使知道。</p>
+                <p>知身性命。皆憑道生。了悟此因。長生人道。種子不絕。世世為人。</p>
+                <p>不生無道之鄉。不斷人之根本。更能心修正道。漸入仙宗。永離輪廻。</p>
+                <p>超昇成道。我故示汝妙法。令度天民。歸真知命。可以本命之日。修齋設醮。</p>
+                <p>啟祝北斗三官五帝。九府四司薦福消災。奏章懇願。虔誠獻禮。種種香花。時新五果。</p>
+                <p>隨世威儀。清淨壇宇。法天像地或於觀宇。或在家庭隨力建功。請行法事。功德深重。</p>
+                <p>不可具陳。唸此大聖北斗七元真君名號。當得罪業消除。災衰洗蕩。福壽資命。</p>
+                <p>善果臻身。凡有急難。可以焚香誦之。尅期安泰。於是說。</p>
+                <p>大聖北斗解厄應驗曰。</p>
+                <p>大聖北斗七元君。能解三災厄。</p>
+                <p>大聖北斗七元君。能解四煞厄。</p>
+                <p>大聖北斗七元君。能解五行厄。</p>
+                <p>大聖北斗七元君。能解六害厄。</p>
+                <p>大聖北斗七元君。能解七傷厄。</p>
+                <p>大聖北斗七元君。能解八難厄。</p>
+                <p>大聖北斗七元君。能解九星厄。</p>
+                <p>大聖北斗七元君。能解夫妻厄。</p>
+                <p>大聖北斗七元君。能解男女厄。</p>
+                <p>大聖北斗七元君。能解產生厄。</p>
+                <p>大聖北斗七元君。能解復連厄。</p>
+                <p>大聖北斗七元君。能解疫癘厄。</p>
+                <p>大聖北斗七元君。能解疾病厄。</p>
+                <p>大聖北斗七元君。能解精邪厄。</p>
+                <p>大聖北斗七元君。能解虎狼厄。</p>
+                <p>大聖北斗七元君。能解蟲蛇厄。</p>
+                <p>大聖北斗七元君。能解劫賊厄。</p>
+                <p>大聖北斗七元君。能解枷棒厄。</p>
+                <p>大聖北斗七元君。能解橫死厄。</p>
+                <p>大聖北斗七元君。能解咒誓厄。</p>
+                <p>大聖北斗七元君。能解天羅厄。</p>
+                <p>大聖北斗七元君。能解地網厄。</p>
+                <p>大聖北斗七元君。能解刀兵厄。</p>
+                <p>大聖北斗七元君。能解水火厄。</p>
+                <p>於是七元君。大聖善通靈。濟度諸厄難。超出苦眾生。若有急告者。</p>
+                <p>持誦保安平。盡憑生百福。咸契於五行。三魂得安健。邪魅永消停。</p>
+                <p>五方降真炁。萬福自來駢。長生超八難。皆由奉七星。生生身自在。</p>
+                <p>世世保神清。蓋似光中影。應如谷裏聲。三元神共護。萬聖眼同明。</p>
+                <p>無災亦無障。永保道心寧。</p>
+                <p>老君曰。</p>
+                <p>北辰垂象。而眾星拱之。為造化之樞機。作人神之主宰。</p>
+                <p>宣威三界。統御萬靈。判人間善惡之期。司陰府是非之目。</p>
+                <p>五行共稟。七政同科。有廻死注生之功。有消災度厄之力。</p>
+                <p>上至帝王。下及庶人。尊卑雖則殊途。命分俱無差別。</p>
+                <p>凡夫在世。迷謬者多。不知身屬北斗。命由天府。有災有患。</p>
+                <p>不知解謝之門。祈福祈生。莫曉歸依之路。致使魂神被繫。</p>
+                <p>禍患來纏或重病不痊。或邪妖尅害。連年困篤。累歲迍邅。</p>
+                <p>塚訟徵呼。先亡復連。或上天譴責。或下鬼訴誣。若有此危厄。</p>
+                <p>如何救解。急須投告。北斗醮謝真君。及轉真經。認本命星君。</p>
+                <p>方獲安泰。以致康榮。更有深妙。不可盡述。凡見北斗真形。</p>
+                <p>頂禮恭敬。咒曰。</p>
+                <p>天靈節榮。願保長生。太玄之一。守其真形。</p>
+                <p>五臟神君。各保安寧。急急如律令。</p>
+                <p>聖母紫光天后。</p>
+                <p>太極天皇大帝。</p>
+                <p>北極紫微大帝。擎羊聖者。陀羅聖者。</p>
+                <p>北斗第一天樞宮。陽明貪狼太星君。子生人屬之。</p>
+                <p>北斗第二天璇宮。陰精巨門元星君。丑亥生人屬之。</p>
+                <p>北斗第三天璣宮。真人祿存真星君。寅戍生人屬之。</p>
+                <p>北斗第四天權宮。玄冥文曲紐星君。卯酉生人屬之。</p>
+                <p>北斗第五天衡宮。丹元廉貞綱星君。辰申生人屬之。</p>
+                <p>北斗第六問陽宮。北極武曲紀星君。巳未生人屬之。</p>
+                <p>北斗第七瑤光宮。天衝破軍 關星 君。午生人屬之。</p>
+                <p>北斗洞明宮外輔星君。</p>
+                <p>北斗隱光宮內弼星君。</p>
+                <p>上台虛精開德星君。</p>
+                <p>中台六淳司空星君。</p>
+                <p>下台曲生司祿星君。</p>
+                <p>三台生我來。三台養我來。三台護我來。</p>
+                <p>如是真君名號不可得聞。凡有見聞。能持唸者皆道心深重。</p>
+                <p>宿有善緣。得聞持誦。其功德力。莫可稱量。若正信男女。</p>
+                <p>值此真文。智慧性圓。道心開發。出群迷逕。入希夷門。</p>
+                <p>歸奉真宗。達生榮界。於三元八節。本命生辰。北斗下日。</p>
+                <p>嚴置壇場。轉經齋醮。依儀行道。其福無邊。世世生生。</p>
+                <p>不違真聖。不入邪見。持經之人。常持誦七元真君所屬尊號。</p>
+                <p>善功圓滿。亦降吉祥。即說咒曰。</p>
+                <p>北斗九宸。中天大神。上朝金闕。下覆崑崙。調理綱紀。統制乾坤。</p>
+                <p>大魁貪狼。巨門祿存。文曲廉貞。武曲破軍。高上玉皇。紫微帝君。</p>
+                <p>大周天界。細入微塵。何災不滅。何福不臻。元皇正炁。來合我身。</p>
+                <p>天罡所指。晝夜常輪。俗居小人。好道求靈。願見尊儀。永保長生。</p>
+                <p>三台虛精。六淳曲生。生我養我。護我身形。</p>
+                <br><br>
             </div>
 	    </div>
 	</div>
