--- a/chance/get_chance.html
+++ b/chance/get_chance.html
@@ -97,7 +97,7 @@
 		var numList = $('#number').val().split(' ');
 		for(var i = 0; i < numList.length; i++){
 			$('#answer').append('<p class="lead" >' + chanceList[numList[i]-1] + '</p>');
-			console.log(i);
+			//console.log(i);
 		}
 		//move to namelist
 		$body.animate({
