--- a/chance/medicine_info.html
+++ b/chance/medicine_info.html
@@ -75,6 +75,10 @@
                 <h1>一字真</h1>
                 <p>芽黃: 大黃</p>
                 <p>寸文: 麥文冬</p>
+                <p>人交: 秦艽</p>
+                <p>法下: 用明矾加工炮制的半夏</p>
+                <p>生軍: 生大黄</p>
+                <p>酒軍: 酒大黄</p>
                 <p>(17)福貝: 福員</p>
                 <p>(98)北羌: 乾薑</p>
             </div>
