--- a/chance/choose_chance.html
+++ b/chance/choose_chance.html
@@ -129,7 +129,7 @@
 		hideYesNo();
 		//move to namelist
 		$body.animate({
-			scrollTop: $('#namelist').offset().top
+			scrollTop: $('#answer').offset().top
 		}, 1000);
 	}
 
